<resources>
    <string name="app_name">My First App</string>
    <string name="nameHint">Digite un Nombre</string>
    <string name="lastNameHint">Digite un Apellido</string>
    <string name="gender">Género:</string>
    <string-array name="genders_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="birthdate">Nacimiento:</string>
    <string name="date">mm/dd/yyyy:</string>
    <string name="isAProgrammer">¿Le gusta programar?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="language">Lenguaje:</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="js">JS</string>
    <string name="go">Go Lang</string>
    <string name="ccpp">C/C++</string>
    <string name="cs">C#</string>
    <string name="send">Enviar</string>
    <string name="clear">Limpiar</string>

</resources>
